[pradeep] modifyed create label

--- a/FundooWebApi/src/app/Components/editlabel/editlabel.component.html
+++ b/FundooWebApi/src/app/Components/editlabel/editlabel.component.html
@@ -1,8 +1,8 @@
-<div>
+<!-- <div>
     <div class="search-label">
         <div>
             <input type="text" style="width: 280px; height: 30px;" placeholder="Create Label" #labelInput
-            [(ngModel)]="labels.name">
+            [(ngModel)]="label.name">
         </div>
         <div>
             <a><img id="img" style="height: 40px; width: 40px; padding-left: 10px;" src="../../../assets/images/icons8-add-64.png" (click)="onClickCreateLabel(labelInput.value)"  matTooltip="Create Label"></a>
@@ -11,7 +11,7 @@
     <div class="label-list">
         <div *ngFor="let label of labels" style="display: flex; align-items: center; flex-direction: row;">
             <div style="display: flex; align-items: flex-start;"  (mouseover)="changeText=true" (mouseout)="changeText=false">
-                <!-- <img id="img" src="../../../assets/images/label-24px.svg" style="height: 30px;margin-left: 40px; width: 40px;"> -->
+                <img id="img" src="../../../assets/images/label-24px.svg" style="height: 30px;margin-left: 40px; width: 40px;">
             </div>
             <div style="display: flex; justify-items: flex-start;" (mouseover)="changeText=true" (mouseout)="changeText=false">
                 <img id="img" class="img-style" src="../../../assets/images/delete.svg" style="height: 20px;margin-left: 40px; width: 20px;"  (click)="onClickDeleteLabel(label.labelId)" matTooltip="Delete label">
@@ -25,4 +25,39 @@
             </div>
         </div>
     </div>
+</div> --> 
+<div class="main">
+<mat-label><p>Edit label</p></mat-label>
+<div fxLayout="row" fxLayoutGap="5%">
+  <div fxFlex="10%">
+    <mat-icon >clear</mat-icon>
+  </div>
+
+<div>
+    <input type="text" style="width: 280px; height: 30px;" placeholder="Create Label" [(ngModel)]="label.name">
+</div>
+  <div fxFlex="10%">
+    <button>
+    <mat-icon  (click)="onClickCreateLabel(label)">done</mat-icon></button>
+  </div>
+</div>
+
+
+
+<div *ngFor="let label of labels">
+  <div fxLayout=row>
+    <div fxFlex=40%>
+     <button>
+      <mat-icon class="icon" (click)= "onClickDeleteLabel(label)">delete</mat-icon></button>
+    </div>
+    <div fxFlex=70% class="textarea" contenteditable="true" id="text" #labl>
+      {{label.name}}</div>
+    <div fxFlex=10%>
+      <button>
+      <mat-icon class="icon">edit</mat-icon></button>
+    </div>
+  </div>
+</div>
+
+<button mat-button style="float:right" >Done</button>
 </div>
