--- a/FundooWebApi/src/app/Components/editlabel/editlabel.component.scss
+++ b/FundooWebApi/src/app/Components/editlabel/editlabel.component.scss
@@ -1,15 +1,28 @@
-.search-label {
-    display: flex;
-    justify-content: center;
-    padding-top: 10px;
-  }
-  #img:hover {
-    background-color: rgb(231, 230, 230);
-    height: 15px;
-    width: 5px;
-    border-radius: 30%;
-    display: inline-block;
-  }
-  .img-edit {
-    align-items: flex-end;
-  }
+// .search-label {
+//     display: flex;
+//     justify-content: center;
+//     padding-top: 10px;
+//   }
+//   #img:hover {
+//     background-color: rgb(231, 230, 230);
+//     height: 15px;
+//     width: 5px;
+//     border-radius: 30%;
+//     display: inline-block;
+//   }
+//   .img-edit {
+//     align-items: flex-end;
+//   }
+.textarea{
+
+  outline: none;
+
+  text-decoration-line: underline;
+
+}
+
+.textarea:empty:before{
+  content: attr(data-text);
+  opacity: 0.5;
+  font-size: 12px;
+}
