--- a/FundooWebApi/src/app/Components/label/label.component.html
+++ b/FundooWebApi/src/app/Components/label/label.component.html
@@ -1,15 +1,15 @@
 <div>
     <div class="search-label">
         <div>
-        <input type="text" placeholder="Search"  #labelInput   [(ngModel)]="label.name" >
+        <input type="text" placeholder="Search"    [(ngModel)]="label.name" >
         </div>
-        <div >
+        <div (click)="onClickCreateLabel(noteId)" >
            <a><img  style="height: 40px; width: 40px; padding-left: 10px;" src="../../../assets/images/icons8-add-64.png"  
-            (click)="onClickCreateLabel(noteId)" matTooltip="Create Label"></a>
+             matTooltip="Create Label"></a>
         </div>
     </div>
     <div class="label-list">
-        <div *ngFor="let label of labels">  
+        <div *ngFor="let label of labels"style="margin-right: initial;">  
             <mat-checkbox ></mat-checkbox>       
             <label mat-menu-item style="display:inline"  (click)="onCheckedAddLabel(label.labelId)">{{label.name}}</label>
         </div>
