[pradeep] integrating signout component

--- a/FundooWebApi/src/app/Components/dashboard/dashboard.component.html
+++ b/FundooWebApi/src/app/Components/dashboard/dashboard.component.html
@@ -32,8 +32,8 @@
         <button mat-icon-button class="apps" >
           <mat-icon>apps</mat-icon>
         </button>
-        <button mat-icon-button class="apps" >
-          <mat-icon>person</mat-icon>
+        <button mat-icon-button class="apps" (click)="signout()">
+          <img src="../../../assets/images/profileIcon.png">
         </button>
       </div>
      
