--- a/FundooWebApi/src/app/Components/dashboard/dashboard.component.scss
+++ b/FundooWebApi/src/app/Components/dashboard/dashboard.component.scss
@@ -124,7 +124,8 @@ mat-sidenav{
   margin-top:5%;
   margin-left:9%;
 }
-.signout{
-  margin-left: 7%;
-  //background-color: rebeccapurple;
+.pl {
+  padding-left: 50px;
+  text-align: center;
+  border: none;
 }
