--- a/FundooWebApi/src/app/Components/reminder/reminder.component.html
+++ b/FundooWebApi/src/app/Components/reminder/reminder.component.html
@@ -1,1 +1,33 @@
-<p>reminder works!</p>
+<mat-card class="main">
+    <div fxLayout = "row">
+        <button  matTooltip="Go back" style="border: none;outline: none;"> <img src= "../../../assets/images/backicon.svg" >  </button>
+        <button mat-menu-item style="background-color: white;"> Pick date & time </button>
+    </div> 
+    <mat-form-field>
+        <input matInput   [matDatepicker]="dp" [formControl]="date" value="matDatepicker" #cal >
+        <mat-datepicker-toggle  matSuffix [for]="dp" ></mat-datepicker-toggle>
+        <mat-datepicker #dp></mat-datepicker>
+      </mat-form-field><br>
+      <mat-form-field appearance="fill">
+        <mat-label>8:00 AM</mat-label>
+      <mat-select>
+        <mat-option  style="background-color: white;" value="8:00 AM"  #a>Morning 8:00 AM</mat-option>
+        <mat-option value="1:00 PM"  #b>Afternoon 1:00 PM</mat-option>
+        <mat-option value="6:00 PM"  #c>Evening 6:00 PM</mat-option>
+        <mat-option value="8:00 PM"  #d>Night 8:00 PM</mat-option>
+        <mat-option value="8:00 AM"  #e>Custom</mat-option>
+      </mat-select>
+    </mat-form-field><br>
+    <mat-form-field appearance="fill">
+        <mat-label>Does not repeat</mat-label>
+        <mat-select>
+          <mat-option value="option">Does not repeat</mat-option>
+          <mat-option value="option">Daily</mat-option>
+          <mat-option value="option">Weekly</mat-option>
+          <mat-option value="option">Monthly</mat-option>
+          <mat-option value="option">Yearly</mat-option>
+        </mat-select>
+      </mat-form-field>
+      >
+<button class="button" mat-button (click) = "addreminder(data.note)">Save</button>
+</mat-card>
