--- a/FundooWebApi/src/app/Components/icons/icons.component.html
+++ b/FundooWebApi/src/app/Components/icons/icons.component.html
@@ -14,7 +14,7 @@
         </div>
 </mat-menu>
 
-<button mat-icon-button>
+<button mat-icon-button (click)=collabrator()>
     <span class="material-icons"> person_add</span> 
 </button>
 
