--- a/FundooWebApi/src/app/Components/reminder/reminder.component.html
+++ b/FundooWebApi/src/app/Components/reminder/reminder.component.html
@@ -29,5 +29,6 @@
         </mat-select>
       </mat-form-field>
       >
-<button class="button" mat-button (click) = "addreminder( cal.value,data.note)">Save</button>
+<button class="button" mat-button (click) = "addreminder(cal.value,data.notes)">Save</button>
+<!-- cal.value,data.note -->
 </mat-card>
