--- a/FundooWebApi/src/app/Components/dashboard/dashboard.component.scss
+++ b/FundooWebApi/src/app/Components/dashboard/dashboard.component.scss
@@ -43,6 +43,10 @@ mat-sidenav{
   height: 40px;
   width: 40px;
 }
+.rightside{
+  width:40% ;
+  margin-left:0;
+}
 .search{
   border: 1px solid lightgray;
   border-radius: 7px;
@@ -62,7 +66,7 @@ mat-sidenav{
   background-color: 1px solid lightgray;
 }
 .refresh{
-  margin-left: 40%;
+  margin-left:auto;
 }
 .list{
   margin-left:auto;
@@ -71,7 +75,7 @@ mat-sidenav{
   margin-left: auto;
 }
 .apps{
-  margin-left: 15%;
+  margin-left: auto;
 }
 .notediv{
   width: 100%;
@@ -128,4 +132,21 @@ mat-sidenav{
   padding-left: 50px;
   text-align: center;
   border: none;
+}
+.div-profilepic{
+  display: flex;
+ justify-content: center;
+
+}
+.mat-menu-content {
+  background-color: 'red' !important;
+}
+.profile-content{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.signbtn{
+  display: flex;
+  justify-content: center;
 }
