--- a/FundooWebApi/src/app/Components/icons/icons.component.html
+++ b/FundooWebApi/src/app/Components/icons/icons.component.html
@@ -1,6 +1,6 @@
 <div class="mainicon" fxLayout="row" fxLayoutAlign="space-between center">
-    
-<button mat-icon-button [matMenuTriggerFor]="reminder" >
+
+    <button mat-icon-button [matMenuTriggerFor]="reminder" >
     <span class="material-icons">notification_important</span>  
 </button>
  <mat-menu #reminder="matMenu">
@@ -14,42 +14,46 @@
         </div>
 </mat-menu>
 
-<button mat-icon-button (click)=collabrator()>
-    <span class="material-icons"> person_add</span> 
-</button>
+   
 
-<div [matMenuTriggerFor]="colorlist" matTooltip="Add Color">
-<button mat-icon-button>
-    <span class="material-icons">color_lens</span>        
-</button>
-</div>
-<mat-menu #colorlist="matMenu" [overlapTrigger]="false">
-    <ng-template matMenuContent>
-        <div>
-            <div fxLayout="row" fxLayoutGap="10px" style="margin-top: 1px" *ngFor="let colors of arrayOfColors">
-                <div *ngFor="let color of colors">
-                    <button [ngStyle]="{ 'background-color': color.color }"(click)="setColor((color.color)) "
-                        matTooltip="{{ color.name }}" mat-mini-fab></button>
+    <button mat-icon-button (click)=collabrator()>
+        <span class="material-icons"> person_add</span>
+    </button>
+
+    <div [matMenuTriggerFor]="colorlist" matTooltip="Add Color">
+        <button mat-icon-button>
+            <span class="material-icons">color_lens</span>
+        </button>
+    </div>
+    <mat-menu #colorlist="matMenu" [overlapTrigger]="false">
+        <ng-template matMenuContent>
+            <div>
+                <div fxLayout="row" fxLayoutGap="10px" style="margin-top: 1px" *ngFor="let colors of arrayOfColors">
+                    <div *ngFor="let color of colors">
+                        <button [ngStyle]="{ 'background-color': color.color }" (click)="setColor((color.color)) "
+                            matTooltip="{{ color.name }}" mat-mini-fab></button>
+                    </div>
                 </div>
             </div>
-        </div>
-    </ng-template>
-</mat-menu>
+        </ng-template>
+    </mat-menu>
 
-<button mat-icon-button>
-    <span class="material-icons">insert_photo</span>
-</button>
+    <button mat-icon-button>
+        <span class="material-icons">insert_photo</span>
+    </button>
 
-<button mat-icon-button (click)='archiveButton()'>
-     <span class="material-icons">archive</span>
-</button>
+    <button mat-icon-button (click)='archiveButton()'>
+        <span class="material-icons">archive</span>
+    </button>
 
-<a><img mat-icon-button [matMenuTriggerFor]="menu" style="height: 1.5em; width: 2em;" src="../../../assets/images/more.svg" 
-    matTooltip="More"></a>
+    <a><img mat-icon-button [matMenuTriggerFor]="menu" style="height: 1.5em; width: 2em;"
+            src="../../../assets/images/more.svg" matTooltip="More"></a>
 
-<mat-menu #menu="matMenu">
-<button mat-menu-item (click)='onClickDelete()'>Delete Note</button>
-<button mat-menu-item (click)='openDialog(note)'>Add Label</button>
-<button mat-menu-item>Add Drawing</button>
-</mat-menu>
+    <mat-menu #menu="matMenu">
+        <button mat-menu-item (click)='onClickDelete()'>Delete Note</button>
+        <button mat-menu-item (click)='openDialog(note)'>Add Label</button>
+        <button mat-menu-item>Add Drawing</button>
+    </mat-menu>
+
+
 </div>
