--- a/FundooWebApi/src/app/Components/icons/icons.component.scss
+++ b/FundooWebApi/src/app/Components/icons/icons.component.scss
@@ -14,3 +14,51 @@
     width:70%;
     height: 70%;
 }
+
+
+
+
+
+.main{
+
+    display: flex;
+
+    justify-content: space-around;
+
+    align-items: center;
+
+   
+
+}
+
+.material-icons{
+
+    border:none;
+
+    width:70%;
+
+    height: 70%;
+
+}
+
+
+
+.time{
+
+    display: block;
+
+    width: 200px;
+
+    margin-bottom: 1.5rem;
+
+}
+
+.material-icons:hover {
+
+    border: none;
+
+    background-color: white;
+
+    color: brown;
+
+}
